objects/Journal_Batch_Header__c.object
<CustomObject>
    <fields>
        <fullName>Balancing_Account__c</fullName>
        <formula>IF( Value( LEFT(Period__c,4))&lt;2015 ,&apos;9999 - Batch Balance&apos;, &apos;9999 - Batch Balance&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balancing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balancing_Amount__c</fullName>
        <formula>Sum_of_Lines__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balancing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balancing_DIM1__c</fullName>
        <formula>IF( Value( LEFT(Period__c,4))&lt;2015 ,&apos;88-888-88&apos;, &apos;99-999-99 - No Assigned Dim1&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balancing DIM1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Journal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Journal_Description__c</fullName>
        <label>Journal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Journal Batch Header</relationshipLabel>
        <relationshipName>Journal_Batch_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Journal_Lines__c</fullName>
        <label>Number of Journal Lines</label>
        <summaryForeignKey>Journal_Upload_Lines__c.Journal_Batch_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sum_of_Lines__c</fullName>
        <description>Sum of Journal Line Values</description>
        <label>Sum of Lines</label>
        <summarizedField>Journal_Upload_Lines__c.Value__c</summarizedField>
        <summaryForeignKey>Journal_Upload_Lines__c.Journal_Batch_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Journal Batch Header</label>
    <listViews>
        <fullName>Journal_Batch_Header_RN</fullName>
        <columns>NAME</columns>
        <columns>Journal_Date__c</columns>
        <columns>Period__c</columns>
        <columns>Journal_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Seth Allyn</value>
        </filters>
        <label>Journal Batch Header - not processed</label>
    </listViews>
    <listViews>
        <fullName>Journal_Batch_Header_not_processed_EX</fullName>
        <columns>NAME</columns>
        <columns>Journal_Date__c</columns>
        <columns>Period__c</columns>
        <columns>Journal_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Ella</value>
        </filters>
        <label>Journal Batch Header - not processed EX</label>
    </listViews>
    <nameField>
        <displayFormat>JBH-{0000}</displayFormat>
        <label>Journal Batch Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Batch Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>